# blower_burn_in

./: .cproject  .gitignore  .project  CMakeLists.txt  nvs.csv  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.old
SDK_Attempts/: sdkconfig.bakmqqtt  sdkconfig.defaults.bak
components/app_event_handler/: CMakeLists.txt  app_event_handler.c  garbage_collector.c  server_eh.c  server_helper.c  test_event_handler.c
components/app_event_handler/include/: app_event_handler.h  garbage_collector.h  test_event_handler.h
components/bsp/: CMakeLists.txt
components/bsp/include/: bsp_board.h
components/console_cmd/: CMakeLists.txt  console_cmd.c  nvs_cmd.c  sensor_cmd.c  serial_inno_cmd.c  system_cmd.c  wifi_cmd.c
components/console_cmd/include/: console_cmd.h  nvs_cmd.h  sensor_cmd.h  serial_inno_cmd.h  wifi_cmd.h
components/inno_connect/: CMakeLists.txt  Kconfig.projbuild  addr_from_stdin.c  console_cmd.c  eth_connect.c  inno_connect.c  stdin_out.c  wifi_connect.c
components/inno_connect/include/: CMakeLists.txt  addr_from_stdin.h  example_common_private.h  inno_connect.h
components/inno_register/: CMakeLists.txt  burnin_types.c  dev_types.c  msg16_types.c  register.c
components/inno_register/include/: burnin_types.h  dev_types.h  msg16_types.h  reg_types.h  register.h
components/inno_register/unit_tests/: CMakeLists.txt  dev_types_test.cpp  msg16_types_test.cpp  register_test.cpp
components/mqtt_handler/: CMakeLists.txt  mqtt_handler.c  test_mqtt_handler.c
components/mqtt_handler/bak/: Kconfig
components/mqtt_handler/include/: mqtt_handler.h  test_mqtt_handler.h
components/pressure_sensor/: .cproject  .project  CMakeLists.txt  helpers.c  main.c  ms45sensor.c  pressureuartdriver.c  spi_mod.c
components/pressure_sensor/include/: helpers.h  ms45sensor.h  pins.h  pressureuartdriver.h  spi_mod.h
components/serial_inno/: CMakeLists.txt  msg16.c  rack_device.c  serial_inno.c  serial_inno_api.c  serial_inno_api_test.c  serial_inno_test.c
components/serial_inno/include/: msg16.h  rack_device.h  serial_inno.h  serial_inno_api_test.h  serial_inno_test.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  main.h  settings.c  settings.h
main/app/: app_burnin_test.c  app_burnin_test.h  app_rack.c  app_rack.h  apprackcomm.c  apprackcomm.h  burn_in.c  burn_in.h  burnin_valve.c  burnin_valve.h  offset_data.c  offset_data.h
main/app/burn_in/: CMakeLists.txt  burnin_valve.c  valve_ach_task.c  valve_position_task.c  valve_setup_task.c
main/app/burn_in/include/: burnin_valve.h  valve_ach_task.h  valve_position_task.h  valve_setup_task.h
main/app/burn_in/unit_tests/: CMakeLists.txt  MockSerialInno.cpp  MockSerialInno.h  offset_data_test.cpp  serial_inno.c  serial_inno.h  valve_setup_task_test.cpp  valve_setup_task_test.h
main/gui/: CMakeLists.txt  ui.c  ui.h  ui_blower_burn_in.c  ui_blower_burn_in.h  ui_boot_animate.c  ui_events.c  ui_helpers.c  ui_helpers.h  ui_main.c  ui_main.h
main/gui/ui_burnin/: CMakeLists.txt  ui.c  ui_main.c
main/gui/ui_rackcomm/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
main/gui/ui_rackcomm/components/: ui_comp.c  ui_comp.h  ui_comp_blowerbipanel.c  ui_comp_blowerbipanel.h  ui_comp_hook.c  ui_comp_hook.h
main/gui/ui_rackcomm/fonts/: ui_font_Font_Awesome_Solid.c
main/gui/ui_rackcomm/screens/: ui_Screen1.c
